# FastNote

./: .babelrc  .eslintrc.json  .firebaserc  .prettierignore  README.md  firebase.json  jest.config.js  package.json  tsconfig.json
.firebase/: hosting.b3V0.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
public/: manifest.json
public/assets/fontello/: config.json  demo.html
public/assets/fontello/css/: fontello-codes.css  (+4 more)
src/: setupTests.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/__tests__/: index.test.tsx
src/__tests__/lib/: fastNoteDate.test.ts
src/components/: blackCover.tsx  loading.tsx  navbar.tsx  topbar.tsx
src/components/memo/: editor.tsx  memoList.tsx  resizeHandle.tsx
src/components/navbar/: addCategoryButton.tsx  categoriesCheckbox.tsx  categoriesList.tsx  categoryInput.tsx  ellipsisButton.tsx  logoutButton.tsx  pulldownMenu.tsx  settingsButton.tsx  textButton.tsx  trashboxButton.tsx
src/components/settings/: settingsContent.tsx  settingsItem.tsx  settingsList.tsx
src/components/topbar/: addButton.tsx  addMemoButton.tsx  openNavButton.tsx  topbar.tsx
src/lib/: crypt.ts  databaseInfo.ts  fastNoteDB.ts  fastNoteDate.ts  getMemo.ts  sort.ts  theme.ts
src/lib/atoms/: UserIdAtoms.ts  editorAtoms.ts  localDBAtom.ts  searchAtom.ts  uiAtoms.ts  userIdAtoms.ts
src/lib/firebase/: auth.ts  config.ts  database.ts
src/pages/: 404.tsx  _app.tsx  home.tsx  index.tsx  pp.tsx  settings.tsx  tos.tsx
src/pages/api/: hello.tsx
src/styles/: globals.css  tos_pp.style.ts
(+28 files in other folders)
